2007-06-01 Raphael Neider <rneider AT web.de>

	* doc/sdccman.lyx: added --disable-pic16-port, fixed some `--' and
	  quotation marks, clarified role of PIC14 vs. PIC16 ports
	* src/pic16/devices.inc,
	* device/include/pic16/pic18fregs.h,
	* device/include/pic16/pic18f[24][45]j10.h,
	* device/lib/pic16/pics.all,
	* device/lib/pic16/libdev/pic18f[24][45]j10.c: added support for
	  18f24j10, 18f25j10, 18f44j10, and 18f45j10
	* device/lib/pic16/libio/{i2c,adc,usart}.ignore: do not build IO libs
	  for new devices as they are not yet supported by gputils

2007-05-31 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 2.7.0 released
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.7.1
	* support/scripts/sdcc.nsi: added How to create WIN32 release
	  setup.exe package

2007-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented initialization and allocation of absolute
	  variables, bit parameter passing, the need for function pointers to be
	  reentrant and alpha quality support of inline and retrict

2007-05-26 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug1057979.c, support/regression/tests/malloc.c,
	  support/regression/fwk/include/testfwk.h: fixed compilation on Mac OS x
	* docs/knownbugs.html: updated

2007-05-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: inserted footnotes about inline assembler labels,
	  thanks Jan Waclawek
	* src/mcs51/gen.c (aopPut): fixed part of bug 1723128 when result is
	  AOP_CRY and ruonly
	  (gencjneshort): optimized when left is AOP_DIR
	* src/SDCCglue.c (printIvalStruct): fixed other part of bug 1723128 for
	  initializing unions in a struct/array
	* support/regression/fwk/include/testfwk.h: added defines for data, near
	  and far for host and z80
	* support/regression/tests/bug1723128.c: new, added

2007-05-22 Borut Razem <borut.razem AT siol.net>

	* doc/knownbugs.html: updated
